feat: adjust link to stylesheet

--- a/src/_includes/layouts/root.njk
+++ b/src/_includes/layouts/root.njk
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <title>{{ title }}</title>
   </head>
   <body>
-	<h1>{{title}}</h1>
     {{content | safe}}
   </body>
 </html>
