feat: add fonts styles

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@800;900&family=Nunito+Sans:ital,wght@0,400;0,900;1,700&display=swap');
+
+
+$nunito: 'Nunito Sans', sans-serif;
+$darkergrotesque: 'Darker Grotesque', sans-serif;
+
 $primary-color-100: #0B485B;
 $primary-color-60: #19C1CE;
 $primary-color-50: #07E5EB;
@@ -14,4 +20,6 @@ $gray-30: #CFD3D8;
 $gray-10: #F1F3F5;
 
 $white: #FFFFFF;
+
+$layout-width: 1440px
 
