feat: add rdProsCards import

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,6 +3,7 @@
 @import "./freeAccountSection.scss";
 @import "./understandRdStation.scss";
 @import "./whyBussinessChooseRD.scss";
+@import "./rdProsCards.scss";
 
 * {
 	box-sizing: border-box;
