feat: add freeTrialInputSection

--- a/src/index.njk
+++ b/src/index.njk
@@ -47,6 +47,138 @@ title: RD Station
 </header>
 
 <main>
+  <section class="freeTrialInputSection">
+    <div class="freeTrialInputdiv">
+      <div class="moreOpportunitiesForYou">
+        <h1 class="moreOpportunitiesForYouTitle title">
+          Gere mais
+          <span class="moreOpportunitiesForYouTitleColor">oportunidades</span>
+          para seu negócio
+        </h1>
+        <h3 class="moreOpportunitiesForYouSubtitle">
+          O RD Station Marketing é um software para sua empresa fazer campanhas
+          melhores, nutrir Leads, gerar oportunidades comerciais qualificadas e
+          alcançar mais resultados.
+        </h3>
+      </div>
+      <div class="togetherSinceFirstStep">
+        
+        <h3 class="togetherSinceFirstStepTitle">
+          Estaremos juntos desde o primeiro passo!
+        </h3>
+        <p class="togetherSinceFirstStepText">
+          Se você ainda não sabe como extrair o máximo das ações digitais, não
+          tem problema. O <b>RD Station Marketing</b> é mais que uma ferramenta,
+          nos importamos com os seus resultados.
+          <br />
+          <br />
+          <b>Estaremos com você do planejamento até a prática!</b>
+          <div class="backgroundRectangle"></div>
+        </p>
+      </div>
+      <div class="freeTrialForm">
+        <section class="freeTrialFormTitleSection">
+          <h3 class="freeTrialFormTitle">
+            Comece seus 10 dias de teste grátis do RD Station Marketing!
+          </h3>
+          <span class="freeTrialFormSubTitle">
+            Não precisa cadastrar cartão de crédito. 😉
+          </span>
+        </section>
+        <section class="freeTrialFormSection">
+          <form name="leadHomePage" method="POST" data-netlify="true">
+            <label for="name">Diga, qual seu nome?</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Insira seu nome"
+            />
+
+            <label for="workEmail">Seu email de trabalho</label>
+            <input
+              type="email"
+              id="workEmail"
+              name="workEmail"
+              placeholder="Insira seu e-mail"
+            />
+
+            <label for="telephone">Seu telefone</label>
+            <input
+              type="tel"
+              id="telephone"
+              name="telephone"
+              placeholder="Insira seu número de telefone com DDD"
+            />
+
+            <label for="occupation">Seu cargo de ocupação</label>
+            <select
+              id="occupation"
+              name="occupation"
+              placeholder="Selecione seu cargo"
+            >
+              <option value="vendas">Time de Vendas</option>
+              <option value="marketing">Time de Marketing</option>
+              <option value="tecnologia">Time de Tecnologia</option>
+              <option value="produto">Time de Produto</option>
+            </select>
+
+            <label for="password">Crie uma senha</label>
+            <input
+              type="password"
+              id="password"
+              name="password"
+              placeholder="Insira sua senha"
+            />
+
+            <label for="confirmPassword">Confirme sua senha</label>
+            <input type="text" id="" name="" placeholder="Confirme sua senha" />
+
+            <span>Qual o site da sua empresa?</span>
+            <input
+              type="radio"
+              id="companySite"
+              name="companySite"
+              placeholder="Insira seu nome"
+              value="haveSite"
+            />
+            <label for="companySite">Meu site é</label>
+            <input
+              type="text"
+              id="companySiteInfo"
+              name="companySiteInfo"
+              placeholder="Insira o endereço do seu site"
+            />
+
+            <input
+              type="radio"
+              id="companySiteNot"
+              name="companySiteNot"
+              placeholder="Insira seu nome"
+              value="doesntHaveSite"
+            />
+            <label for="companySiteNot">Ainda não tenho site</label>
+            <ul class="useTermsList">
+              <li>
+                Ao criar minha conta estou de acordo com os
+                <a href="#">termos de uso</a> do software e
+                <a href="#">política de privacidade</a>.
+              </li>
+              <li>
+                Ao preencher o formulário, concordo em receber comunicações de
+                acordo com meus interesses.
+              </li>
+              <li>
+                Você pode alterar suas permissões de comunicação a qualquer
+                tempo.
+              </li>
+            </ul>
+          </form>
+        </section>
+      </div>
+    </div>
+  </section>
+
   <section class="rdStationEfficiency">
     <div class="rdStationEfficiencyDiv">
       <div class="rdoerImageDiv">
