feat: add freeTrialInputSection scss

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -5,6 +5,7 @@
 @import "./whyBussinessChooseRD.scss";
 @import "./rdProsCards.scss";
 @import "./rdStationEfficiency.scss";
+@import "./freeTrialInputSection.scss";
 
 * {
 	box-sizing: border-box;
