feat: add title class

--- a/src/index.njk
+++ b/src/index.njk
@@ -63,7 +63,7 @@ title: RD Station
       </div>
       <div class="togetherSinceFirstStep">
         
-        <h3 class="togetherSinceFirstStepTitle">
+        <h3 class="togetherSinceFirstStepTitle title">
           Estaremos juntos desde o primeiro passo!
         </h3>
         <p class="togetherSinceFirstStepText">
