--- a/src/assets/scss/freeTrialInputSection.scss
+++ b/src/assets/scss/freeTrialInputSection.scss
@@ -85,6 +85,7 @@
 
       .togetherSinceFirstStepTitle {
         font-size: 32px;
+        color: $white;
       }
 
       .togetherSinceFirstStepText {
@@ -105,6 +106,8 @@
       box-shadow: 0px 4px 12px rgba(33, 36, 41, 0.14);
       border-radius: 2px;
       padding: 1.5rem;
+
+      margin-top: 2.5rem;
     }
   }
 }
