feat: add dynamic password input

--- a/src/index.njk
+++ b/src/index.njk
@@ -140,18 +140,22 @@ title: RD Station
                 id="password"
                 name="password"
                 placeholder="Insira sua senha"
+                class="passwordField"
                 required
               />
+              <img src="./assets/svg/seePassword.svg" alt="Toggle password" class="passwordIcon">
             </p>
             <p>
               <label for="confirmPassword">Confirme sua senha</label>
               <input
-                type="text"
-                id=""
-                name=""
+                type="password"
+                id="confirmPassword"
+                name="confirmPassword"
                 placeholder="Confirme sua senha"
+                class="passwordField"
                 required
               />
+              <img src="./assets/svg/seePassword.svg" alt="Toggle password" class="passwordIcon">
             </p>
             <div class="chooseYourCompany">
               <span>Qual o site da sua empresa?</span>
@@ -210,6 +214,7 @@ title: RD Station
         </section>
       </div>
     </div>
+    <script src="/_includes/js/inputPassword.js"></script>
   </section>
 
   <section class="rdStationEfficiency">
