--- a/src/assets/scss/freeAccountSection.scss
+++ b/src/assets/scss/freeAccountSection.scss
@@ -11,6 +11,14 @@
   height: 50vh;
   margin-bottom: 2rem;
 
+  @media screen and (max-width: $smallerdesktop) {
+    max-width: $layout-width-smallerdesktop !important;
+  }
+
+  @media screen and (max-width: $cellphone) {
+    max-width: $layout-width-cellphone !important;
+  }
+
   .freeAccountText {
     display: flex;
     flex-direction: column;
