--- a/src/assets/scss/rdProsCards.scss
+++ b/src/assets/scss/rdProsCards.scss
@@ -6,11 +6,19 @@
   margin: auto;
   margin-bottom: 8rem;
 
+  @media screen and (max-width: $smallerdesktop) {
+    max-width: $layout-width-smallerdesktop;
+  }
+
+  @media screen and (max-width: $cellphone) {
+    max-width: $layout-width-cellphone;
+  }
+
   .rdProsTitle {
     font-size: 40px;
-	width: 50%;
-	margin-bottom: 4rem;
-	color: $gray-100;
+    width: 50%;
+    margin-bottom: 4rem;
+    color: $gray-100;
   }
 
   .rdProsCardsContent {
@@ -27,8 +35,8 @@
       flex-direction: column;
       align-items: flex-start;
       padding: 24px;
-	  color: $gray-100;
-	  max-height: 400px;
+      color: $gray-100;
+      max-height: 400px;
     }
   }
 }
