--- a/src/assets/scss/understandRdStation.scss
+++ b/src/assets/scss/understandRdStation.scss
@@ -15,6 +15,10 @@
     margin-bottom: auto;
     background-color: $gray-10;
     z-index: 0;
+
+    @media screen and (max-width: $smallerdesktop) {
+      width: 98vw;
+    }
   }
 
   .widthContainer {
@@ -24,6 +28,14 @@
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 3rem;
     height: 100%;
+
+    @media screen and (max-width: $smallerdesktop) {
+      max-width: $layout-width-smallerdesktop;
+    }
+
+    @media screen and (max-width: $cellphone) {
+      max-width: $layout-width-cellphone;
+    }
 
     .understandRdStationText {
       display: flex;
