refactor: change freeTrialForm position

--- a/src/index.njk
+++ b/src/index.njk
@@ -61,20 +61,6 @@ title: RD Station
           alcançar mais resultados.
         </h3>
       </div>
-      <div class="togetherSinceFirstStep">
-        <h3 class="togetherSinceFirstStepTitle title">
-          Estaremos juntos desde o primeiro passo!
-        </h3>
-        <div class="togetherSinceFirstStepText">
-          Se você ainda não sabe como extrair o máximo das ações digitais, não
-          tem problema. O <b>RD Station Marketing</b> é mais que uma ferramenta,
-          nos importamos com os seus resultados.
-          <br />
-          <br />
-          <b>Estaremos com você do planejamento até a prática!</b>
-          <div class="backgroundRectangle"></div>
-        </div>
-      </div>
       <div class="freeTrialForm">
         <section class="freeTrialFormTitleSection">
           <h3 class="freeTrialFormTitle">
@@ -213,6 +199,20 @@ title: RD Station
           </form>
         </section>
       </div>
+      <div class="togetherSinceFirstStep">
+        <h3 class="togetherSinceFirstStepTitle title">
+          Estaremos juntos desde o primeiro passo!
+        </h3>
+        <div class="togetherSinceFirstStepText">
+          Se você ainda não sabe como extrair o máximo das ações digitais, não
+          tem problema. O <b>RD Station Marketing</b> é mais que uma ferramenta,
+          nos importamos com os seus resultados.
+          <br />
+          <br />
+          <b>Estaremos com você do planejamento até a prática!</b>
+          <div class="backgroundRectangle"></div>
+        </div>
+      </div>
     </div>
     <script src="/_includes/js/inputPassword.js"></script>
   </section>
@@ -319,6 +319,7 @@ title: RD Station
       {% endfor %}
     </section>
   </section>
+  <script src="/_includes/js/responsiveLayout.js"></script>
 </main>
 
 <footer>
